<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_game"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_gravity="center"
                        android:scaleType="matrix"
                        android:src="@mipmap/ic_launcher" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#99FFFFFF"
                        android:gravity="center"
                        android:layout_alignBottom="@id/img_game"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_game_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding"
                            android:text="@string/app_name"
                            android:textColor="@color/primaryDarkColor"
                            android:textSize="18sp"
                            android:textStyle="bold" />




                    </LinearLayout>


                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_game_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/app_name"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="17sp"
                />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding"
                    android:id="@+id/layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_game_desc">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:foregroundGravity="center"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="@dimen/title"
                        android:text="@string/player_count"
                        android:padding="@dimen/padding"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/img_game"
                       />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_player_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:foregroundGravity="center"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="@dimen/text_size"
                        android:padding="@dimen/padding"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/img_game"
                        tools:text="@string/rate" />


                </androidx.appcompat.widget.LinearLayoutCompat>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout"
                    android:layout_margin="@dimen/margin"
                    android:padding="@dimen/padding"
                    android:id="@+id/layout2"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:padding="@dimen/padding"
                        android:text="@string/Genre"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/title"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:padding="@dimen/padding"
                        tools:text="@string/app_name"
                        android:layout_marginEnd="@dimen/margin"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/text_size" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_genre"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="@dimen/margin"
                        android:layout_gravity="center"
                        android:scaleType="matrix"
                        android:src="@mipmap/ic_launcher" />




                </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout2"
                android:layout_margin="@dimen/margin"
                android:padding="@dimen/padding"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:padding="@dimen/padding"
                    android:textStyle="bold"
                    android:text="@string/game_video"
                    android:layout_marginEnd="@dimen/margin"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/title" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:foregroundGravity="center"
                    android:autoLink="web"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="12sp"
                    android:padding="@dimen/padding"
                    android:layout_margin="@dimen/margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_game"
                    tools:text="@string/rate" />
            </LinearLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>